--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name": "fqtestpack", "version": "1.0.0", "author": "Skrrrr", "description": "PckTest", "displayName": "Pack", "tags": {"dataType": [], "useCase": [], "technology": []}}
+{"name": "FQTestPack", "version": "1.0.0", "author": "FQ", "description": "6PAcks", "displayName": "FQPack", "tags": {"dataType": [], "useCase": [], "technology": []}}
